<resources>
    <string name="app_name">K22411CReviewAssignment</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="title_remember_me">Remember me</string>
    <string name="title_login_button">Login</string>
    <string name="menu_add">Add</string>
    <string name="menu_about">About</string>
    <string name="product_name">Product Name:</string>
    <string name="price">Price:</string>
    <string name="description">Description:</string>
    <string name="title_save">Save</string>
    <string name="title_student_information">Student Information</string>
    <string name="title_class_id">Class ID:</string>
    <string name="title_email">Student Email:</string>
    <string name="title_student_name">Student Name:</string>
    <string name="title_student_id">Student ID:</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_menu">Rebound Piercings</string>
</resources>