<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/edtProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtUnitPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:layout_below="@id/edtProductName"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_save"
        android:layout_below="@id/edtUnitPrice"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_cancel"
        android:layout_below="@id/btnSave"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>