<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_student_information"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/avatar"
            android:scaleType="centerCrop"
            android:layout_marginBottom="16dp"
            android:background="@drawable/oval_shape"
            android:clipToOutline="true"
            android:contentDescription="Student Avatar" />

        <TextView
            android:id="@+id/tvStudentId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_student_id"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvStudentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_student_name"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_email"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvClassName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_class_id"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>